bison.output
Grammar

    0 $accept: SourceFile $end

    1 SourceFile: PackageClause SEMICOLON TopLevelDeclList

    2 TopLevelDeclList: %empty
    3                 | TopLevelDeclList TopLevelDecl SEMICOLON

    4 Block: LBRACE StatementList RBRACE

    5 StatementList: %empty
    6              | StatementList Statement SEMICOLON

    7 IdentifierList: IDENTIFIER
    8               | IdentifierList COMMA IDENTIFIER

    9 Type: INT
   10     | BOOL

   11 ExpressionList: Expression
   12               | ExpressionList COMMA Expression

   13 TopLevelDecl: VarDecl
   14             | FunctionDecl

   15 VarDecl: VAR VarSpec
   16        | VAR LPAREN VarSpecList RPAREN

   17 VarSpecList: %empty
   18            | VarSpecList VarSpec SEMICOLON

   19 VarSpec: IdentifierList ASSIGN ExpressionList
   20        | IdentifierList Type
   21        | IdentifierList Type ASSIGN ExpressionList

   22 FunctionDecl: FUNC IDENTIFIER Signature Block

   23 Signature: Parameters
   24          | Parameters Result

   25 Result: Parameters
   26       | Type

   27 Parameters: LPAREN RPAREN
   28           | LPAREN ParameterList RPAREN
   29           | LPAREN ParameterList COMMA RPAREN

   30 ParameterList: ParameterDecl
   31              | ParameterList COMMA ParameterDecl

   32 ParameterDecl: IdentifierList Type
   33              | Type

   34 Operand: Literal
   35        | IDENTIFIER
   36        | LPAREN Expression RPAREN

   37 Literal: INTLITERAL
   38        | BOOLLITERAL

   39 PrimaryExpr: Operand
   40            | PrimaryExpr Arguments

   41 Arguments: LPAREN RPAREN
   42          | LPAREN ExpressionList RPAREN
   43          | LPAREN COMMA RPAREN
   44          | LPAREN ExpressionList COMMA RPAREN

   45 Expression: UnaryExpr
   46           | Expression OR Expression
   47           | Expression AND Expression
   48           | Expression PLUS Expression
   49           | Expression MIN Expression
   50           | Expression MUL Expression
   51           | Expression DIV Expression
   52           | Expression GT Expression
   53           | Expression GE Expression
   54           | Expression LT Expression
   55           | Expression LE Expression
   56           | Expression EQ Expression
   57           | Expression NE Expression

   58 UnaryExpr: PrimaryExpr
   59          | Unary_op UnaryExpr

   60 Unary_op: PLUS
   61         | MIN
   62         | NOT

   63 Statement: VarDecl
   64          | SimpleStmt
   65          | ReturnStmt
   66          | Block
   67          | IfStmt
   68          | ForStmt

   69 SimpleStmt: %empty
   70           | Expression
   71           | IncDecStmt
   72           | Assignment

   73 IncDecStmt: Expression INC
   74           | Expression DEC

   75 Assignment: ExpressionList PLUSASSIGN ExpressionList
   76           | ExpressionList MINASSIGN ExpressionList
   77           | ExpressionList MULASSIGN ExpressionList
   78           | ExpressionList DIVASSIGN ExpressionList
   79           | ExpressionList ASSIGN ExpressionList

   80 ReturnStmt: RETURN
   81           | RETURN ExpressionList

   82 IfStmt: IF Expression Block
   83       | IF Expression Block ELSE IfStmt
   84       | IF Expression Block ELSE Block
   85       | IF SimpleStmt SEMICOLON Expression Block
   86       | IF SimpleStmt SEMICOLON Expression Block ELSE IfStmt
   87       | IF SimpleStmt SEMICOLON Expression Block ELSE Block

   88 ForStmt: FOR Block
   89        | FOR Expression Block
   90        | FOR ForClause Block

   91 ForClause: SimpleStmt SEMICOLON Expression SEMICOLON SimpleStmt
   92          | SimpleStmt SEMICOLON SEMICOLON SimpleStmt

   93 PackageClause: PACKAGE IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 1 3 6 18 85 86 87 91 92
    COMMA (259) 8 12 29 31 43 44
    INT (260) 9
    BOOL (261) 10
    PACKAGE (262) 93
    RETURN (263) 80 81
    VAR (264) 15 16
    IF (265) 82 83 84 85 86 87
    FOR (266) 88 89 90
    FUNC (267) 22
    ELSE (268) 83 84 86 87
    LPAREN (269) 16 27 28 29 36 41 42 43 44
    RPAREN (270) 16 27 28 29 36 41 42 43 44
    LBRACE (271) 4
    RBRACE (272) 4
    PLUS (273) 48 60
    MIN (274) 49 61
    MUL (275) 50
    DIV (276) 51
    PLUSASSIGN (277) 75
    MINASSIGN (278) 76
    MULASSIGN (279) 77
    DIVASSIGN (280) 78
    ASSIGN (281) 19 21 79
    UMINUS (282)
    AND (283) 47
    OR (284) 46
    NOT (285) 62
    INC (286) 73
    DEC (287) 74
    GT (288) 52
    GE (289) 53
    LT (290) 54
    LE (291) 55
    EQ (292) 56
    NE (293) 57
    IDENTIFIER <id> (294) 7 8 22 35 93
    INTLITERAL <id> (295) 37
    BOOLLITERAL <id> (296) 38


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    SourceFile <sourceFile> (43)
        on left: 1
        on right: 0
    TopLevelDeclList <topLevelDeclList> (44)
        on left: 2 3
        on right: 1 3
    Block <block> (45)
        on left: 4
        on right: 22 66 82 83 84 85 86 87 88 89 90
    StatementList <statementList> (46)
        on left: 5 6
        on right: 4 6
    IdentifierList <identifierList> (47)
        on left: 7 8
        on right: 8 19 20 21 32
    Type <type> (48)
        on left: 9 10
        on right: 20 21 26 32 33
    ExpressionList <expressionList> (49)
        on left: 11 12
        on right: 12 19 21 42 44 75 76 77 78 79 81
    TopLevelDecl <topLevelDecl> (50)
        on left: 13 14
        on right: 3
    VarDecl <varDecl> (51)
        on left: 15 16
        on right: 13 63
    VarSpecList <varSpecList> (52)
        on left: 17 18
        on right: 16 18
    VarSpec <varSpec> (53)
        on left: 19 20 21
        on right: 15 18
    FunctionDecl <functionDecl> (54)
        on left: 22
        on right: 14
    Signature <signature> (55)
        on left: 23 24
        on right: 22
    Result <result> (56)
        on left: 25 26
        on right: 24
    Parameters <parameters> (57)
        on left: 27 28 29
        on right: 23 24 25
    ParameterList <parameterList> (58)
        on left: 30 31
        on right: 28 29 31
    ParameterDecl <parameterDecl> (59)
        on left: 32 33
        on right: 30 31
    Operand <operand> (60)
        on left: 34 35 36
        on right: 39
    Literal <literal> (61)
        on left: 37 38
        on right: 34
    PrimaryExpr <primaryExpr> (62)
        on left: 39 40
        on right: 40 58
    Arguments <arguments> (63)
        on left: 41 42 43 44
        on right: 40
    Expression <expression> (64)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 11 12 36 46 47 48 49 50 51 52 53 54 55 56 57 70 73 74 82 83 84 85 86 87 89 91
    UnaryExpr <unaryExpr> (65)
        on left: 58 59
        on right: 45 59
    Unary_op <unary_op> (66)
        on left: 60 61 62
        on right: 59
    Statement <statement> (67)
        on left: 63 64 65 66 67 68
        on right: 6
    SimpleStmt <simpleStmt> (68)
        on left: 69 70 71 72
        on right: 64 85 86 87 91 92
    IncDecStmt <incDecStmt> (69)
        on left: 73 74
        on right: 71
    Assignment <assignment> (70)
        on left: 75 76 77 78 79
        on right: 72
    ReturnStmt <returnStmt> (71)
        on left: 80 81
        on right: 65
    IfStmt <ifStmt> (72)
        on left: 82 83 84 85 86 87
        on right: 67 83 86
    ForStmt <forStmt> (73)
        on left: 88 89 90
        on right: 68
    ForClause <forClause> (74)
        on left: 91 92
        on right: 90
    PackageClause <packageClause> (75)
        on left: 93
        on right: 1


State 0

    0 $accept: . SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


State 1

   93 PackageClause: PACKAGE . IDENTIFIER

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: SourceFile . $end

    $end  shift, and go to state 5


State 3

    1 SourceFile: PackageClause . SEMICOLON TopLevelDeclList

    SEMICOLON  shift, and go to state 6


State 4

   93 PackageClause: PACKAGE IDENTIFIER .

    $default  reduce using rule 93 (PackageClause)


State 5

    0 $accept: SourceFile $end .

    $default  accept


State 6

    1 SourceFile: PackageClause SEMICOLON . TopLevelDeclList

    $default  reduce using rule 2 (TopLevelDeclList)

    TopLevelDeclList  go to state 7


State 7

    1 SourceFile: PackageClause SEMICOLON TopLevelDeclList .
    3 TopLevelDeclList: TopLevelDeclList . TopLevelDecl SEMICOLON

    VAR   shift, and go to state 8
    FUNC  shift, and go to state 9

    $default  reduce using rule 1 (SourceFile)

    TopLevelDecl  go to state 10
    VarDecl       go to state 11
    FunctionDecl  go to state 12


State 8

   15 VarDecl: VAR . VarSpec
   16        | VAR . LPAREN VarSpecList RPAREN

    LPAREN      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14

    IdentifierList  go to state 15
    VarSpec         go to state 16


State 9

   22 FunctionDecl: FUNC . IDENTIFIER Signature Block

    IDENTIFIER  shift, and go to state 17


State 10

    3 TopLevelDeclList: TopLevelDeclList TopLevelDecl . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 11

   13 TopLevelDecl: VarDecl .

    $default  reduce using rule 13 (TopLevelDecl)


State 12

   14 TopLevelDecl: FunctionDecl .

    $default  reduce using rule 14 (TopLevelDecl)


State 13

   16 VarDecl: VAR LPAREN . VarSpecList RPAREN

    $default  reduce using rule 17 (VarSpecList)

    VarSpecList  go to state 19


State 14

    7 IdentifierList: IDENTIFIER .

    $default  reduce using rule 7 (IdentifierList)


State 15

    8 IdentifierList: IdentifierList . COMMA IDENTIFIER
   19 VarSpec: IdentifierList . ASSIGN ExpressionList
   20        | IdentifierList . Type
   21        | IdentifierList . Type ASSIGN ExpressionList

    COMMA   shift, and go to state 20
    INT     shift, and go to state 21
    BOOL    shift, and go to state 22
    ASSIGN  shift, and go to state 23

    Type  go to state 24


State 16

   15 VarDecl: VAR VarSpec .

    $default  reduce using rule 15 (VarDecl)


State 17

   22 FunctionDecl: FUNC IDENTIFIER . Signature Block

    LPAREN  shift, and go to state 25

    Signature   go to state 26
    Parameters  go to state 27


State 18

    3 TopLevelDeclList: TopLevelDeclList TopLevelDecl SEMICOLON .

    $default  reduce using rule 3 (TopLevelDeclList)


State 19

   16 VarDecl: VAR LPAREN VarSpecList . RPAREN
   18 VarSpecList: VarSpecList . VarSpec SEMICOLON

    RPAREN      shift, and go to state 28
    IDENTIFIER  shift, and go to state 14

    IdentifierList  go to state 15
    VarSpec         go to state 29


State 20

    8 IdentifierList: IdentifierList COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 30


State 21

    9 Type: INT .

    $default  reduce using rule 9 (Type)


State 22

   10 Type: BOOL .

    $default  reduce using rule 10 (Type)


State 23

   19 VarSpec: IdentifierList ASSIGN . ExpressionList

    LPAREN       shift, and go to state 31
    PLUS         shift, and go to state 32
    MIN          shift, and go to state 33
    NOT          shift, and go to state 34
    IDENTIFIER   shift, and go to state 35
    INTLITERAL   shift, and go to state 36
    BOOLLITERAL  shift, and go to state 37

    ExpressionList  go to state 38
    Operand         go to state 39
    Literal         go to state 40
    PrimaryExpr     go to state 41
    Expression      go to state 42
    UnaryExpr       go to state 43
    Unary_op        go to state 44


State 24

   20 VarSpec: IdentifierList Type .
   21        | IdentifierList Type . ASSIGN ExpressionList

    ASSIGN  shift, and go to state 45

    $default  reduce using rule 20 (VarSpec)


State 25

   27 Parameters: LPAREN . RPAREN
   28           | LPAREN . ParameterList RPAREN
   29           | LPAREN . ParameterList COMMA RPAREN

    INT         shift, and go to state 21
    BOOL        shift, and go to state 22
    RPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 14

    IdentifierList  go to state 47
    Type            go to state 48
    ParameterList   go to state 49
    ParameterDecl   go to state 50


State 26

   22 FunctionDecl: FUNC IDENTIFIER Signature . Block

    LBRACE  shift, and go to state 51

    Block  go to state 52


State 27

   23 Signature: Parameters .
   24          | Parameters . Result

    INT     shift, and go to state 21
    BOOL    shift, and go to state 22
    LPAREN  shift, and go to state 25

    $default  reduce using rule 23 (Signature)

    Type        go to state 53
    Result      go to state 54
    Parameters  go to state 55


State 28

   16 VarDecl: VAR LPAREN VarSpecList RPAREN .

    $default  reduce using rule 16 (VarDecl)


State 29

   18 VarSpecList: VarSpecList VarSpec . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 30

    8 IdentifierList: IdentifierList COMMA IDENTIFIER .

    $default  reduce using rule 8 (IdentifierList)


State 31

   36 Operand: LPAREN . Expression RPAREN

    LPAREN       shift, and go to state 31
    PLUS         shift, and go to state 32
    MIN          shift, and go to state 33
    NOT          shift, and go to state 34
    IDENTIFIER   shift, and go to state 35
    INTLITERAL   shift, and go to state 36
    BOOLLITERAL  shift, and go to state 37

    Operand      go to state 39
    Literal      go to state 40
    PrimaryExpr  go to state 41
    Expression   go to state 57
    UnaryExpr    go to state 43
    Unary_op     go to state 44


State 32

   60 Unary_op: PLUS .

    $default  reduce using rule 60 (Unary_op)


State 33

   61 Unary_op: MIN .

    $default  reduce using rule 61 (Unary_op)


State 34

   62 Unary_op: NOT .

    $default  reduce using rule 62 (Unary_op)


State 35

   35 Operand: IDENTIFIER .

    $default  reduce using rule 35 (Operand)


State 36

   37 Literal: INTLITERAL .

    $default  reduce using rule 37 (Literal)


State 37

   38 Literal: BOOLLITERAL .

    $default  reduce using rule 38 (Literal)


State 38

   12 ExpressionList: ExpressionList . COMMA Expression
   19 VarSpec: IdentifierList ASSIGN ExpressionList .

    COMMA  shift, and go to state 58

    $default  reduce using rule 19 (VarSpec)


State 39

   39 PrimaryExpr: Operand .

    $default  reduce using rule 39 (PrimaryExpr)


State 40

   34 Operand: Literal .

    $default  reduce using rule 34 (Operand)


State 41

   40 PrimaryExpr: PrimaryExpr . Arguments
   58 UnaryExpr: PrimaryExpr .

    LPAREN  shift, and go to state 59

    $default  reduce using rule 58 (UnaryExpr)

    Arguments  go to state 60


State 42

   11 ExpressionList: Expression .
   46 Expression: Expression . OR Expression
   47           | Expression . AND Expression
   48           | Expression . PLUS Expression
   49           | Expression . MIN Expression
   50           | Expression . MUL Expression
   51           | Expression . DIV Expression
   52           | Expression . GT Expression
   53           | Expression . GE Expression
   54           | Expression . LT Expression
   55           | Expression . LE Expression
   56           | Expression . EQ Expression
   57           | Expression . NE Expression

    PLUS  shift, and go to state 61
    MIN   shift, and go to state 62
    MUL   shift, and go to state 63
    DIV   shift, and go to state 64
    AND   shift, and go to state 65
    OR    shift, and go to state 66
    GT    shift, and go to state 67
    GE    shift, and go to state 68
    LT    shift, and go to state 69
    LE    shift, and go to state 70
    EQ    shift, and go to state 71
    NE    shift, and go to state 72

    $default  reduce using rule 11 (ExpressionList)


State 43

   45 Expression: UnaryExpr .

    $default  reduce using rule 45 (Expression)


State 44

   59 UnaryExpr: Unary_op . UnaryExpr

    LPAREN       shift, and go to state 31
    PLUS         shift, and go to state 32
    MIN          shift, and go to state 33
    NOT          shift, and go to state 34
    IDENTIFIER   shift, and go to state 35
    INTLITERAL   shift, and go to state 36
    BOOLLITERAL  shift, and go to state 37

    Operand      go to state 39
    Literal      go to state 40
    PrimaryExpr  go to state 41
    UnaryExpr    go to state 73
    Unary_op     go to state 44


State 45

   21 VarSpec: IdentifierList Type ASSIGN . ExpressionList

    LPAREN       shift, and go to state 31
    PLUS         shift, and go to state 32
    MIN          shift, and go to state 33
    NOT          shift, and go to state 34
    IDENTIFIER   shift, and go to state 35
    INTLITERAL   shift, and go to state 36
    BOOLLITERAL  shift, and go to state 37

    ExpressionList  go to state 74
    Operand         go to state 39
    Literal         go to state 40
    PrimaryExpr     go to state 41
    Expression      go to state 42
    UnaryExpr       go to state 43
    Unary_op        go to state 44


State 46

   27 Parameters: LPAREN RPAREN .

    $default  reduce using rule 27 (Parameters)


State 47

    8 IdentifierList: IdentifierList . COMMA IDENTIFIER
   32 ParameterDecl: IdentifierList . Type

    COMMA  shift, and go to state 20
    INT    shift, and go to state 21
    BOOL   shift, and go to state 22

    Type  go to state 75


State 48

   33 ParameterDecl: Type .

    $default  reduce using rule 33 (ParameterDecl)


State 49

   28 Parameters: LPAREN ParameterList . RPAREN
   29           | LPAREN ParameterList . COMMA RPAREN
   31 ParameterList: ParameterList . COMMA ParameterDecl

    COMMA   shift, and go to state 76
    RPAREN  shift, and go to state 77


State 50

   30 ParameterList: ParameterDecl .

    $default  reduce using rule 30 (ParameterList)


State 51

    4 Block: LBRACE . StatementList RBRACE

    $default  reduce using rule 5 (StatementList)

    StatementList  go to state 78


State 52

   22 FunctionDecl: FUNC IDENTIFIER Signature Block .

    $default  reduce using rule 22 (FunctionDecl)


State 53

   26 Result: Type .

    $default  reduce using rule 26 (Result)


State 54

   24 Signature: Parameters Result .

    $default  reduce using rule 24 (Signature)


State 55

   25 Result: Parameters .

    $default  reduce using rule 25 (Result)


State 56

   18 VarSpecList: VarSpecList VarSpec SEMICOLON .

    $default  reduce using rule 18 (VarSpecList)


State 57

   36 Operand: LPAREN Expression . RPAREN
   46 Expression: Expression . OR Expression
   47           | Expression . AND Expression
   48           | Expression . PLUS Expression
   49           | Expression . MIN Expression
   50           | Expression . MUL Expression
   51           | Expression . DIV Expression
   52           | Expression . GT Expression
   53           | Expression . GE Expression
   54           | Expression . LT Expression
   55           | Expression . LE Expression
   56           | Expression . EQ Expression
   57           | Expression . NE Expression
